Liberty-managed